--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,27 @@
-decord==0.6.0
-einops==0.3.0
-numpy==1.24.2
-omegaconf==2.1.1
-pandas==2.0.0
-Pillow==9.5.0
-pytorch_lightning==1.8.3
-PyYAML==6.0
-setuptools==65.6.3
-torch==2.0.0
-torchvision
-tqdm==4.65.0
-transformers==4.25.1
-moviepy
-av
-xformers
-timm
-scikit-learn 
-open_clip_torch==2.12.0
+Pytorch-Lightning==1.9.0
+decord
 kornia
-gradio==3.37.0 #3.35.2
+timm
+open_clip_torch
+av
+omegaconf
+transformers
+einops
+scikit-learn
+taming-transformers-rom1504
+pandas
+triton
+xformers==0.0.16
+torch==1.13.1
+torchvision
+fairscale
+psutil==5.9.5
+annotated-types==0.5.0
 plotly
 imageio==2.14.1
 imageio-ffmpeg==0.4.7
 opencv-python==4.8.0.74
+moviepy
+Pillow
+tqdm
+gradio==3.37.0
