modified pipeline_animation for cmcm and evalu cmcm

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@ __pycache__/
 ossutil_output/
 .ossutil_checkpoint/
 
-scripts/*
-!scripts/animate.py
+# scripts/*
+# !scripts/animate.py
 
 *.ipynb
 *.safetensors
