--- a/configs/prompts/motionctrl/v3-1-RealisticVision_omcm.yaml
+++ b/configs/prompts/motionctrl/v3-1-RealisticVision_omcm.yaml
@@ -20,7 +20,8 @@
   # omcm_checkpoint_path: "/group/40034/zhouxiawang/outputs/motionctrl_animatediff/experiments/0010_cmcm_omcm_opt_organimate_256_lr1e-05_bs3_gpus8_ccm4-2024-05-19T20-20-51/checkpoints/omcm-checkpoint-35000.ckpt"
   # omcm_checkpoint_path: "/group/40034/zhouxiawang/outputs/motionctrl_animatediff/experiments/0016_cmcm_omcm_opt_organimate_512_lr1e-05_bs1_gpus8_ccm4_debias0.0-2024-05-24T15-44-41/checkpoints/omcm-checkpoint-200000.ckpt"
   # omcm_checkpoint_path: "/group/40034/zhouxiawang/outputs/motionctrl_animatediff/experiments/0013_cmcm_omcm_dense_256_lr0.0001_bs3_gpus7_ccm4_debias0.0-2024-05-23T12-51-48/checkpoints/omcm-checkpoint-210000.ckpt"
-  omcm_checkpoint_path: "/group/30098/zhouxiawang/outputs/motionctrl_animatediff/experiments/0016_cmcm_omcm_opt_organimate_512_lr1e-05_bs1_gpus4_ccm4_debias5-2024-06-21T21-40-07/checkpoints/omcm-checkpoint-65000.ckpt"
+  # omcm_checkpoint_path: "/group/30098/zhouxiawang/outputs/motionctrl_animatediff/experiments/0016_cmcm_omcm_opt_organimate_512_lr1e-05_bs1_gpus4_ccm4_debias5-2024-06-21T21-40-07/checkpoints/omcm-checkpoint-65000.ckpt"
+  omcm_checkpoint_path: "/group/30098/zhouxiawang/outputs/motionctrl_animatediff/experiments/0016_cmcm_omcm_opt_organimate_512_lr1e-05_bs1_gpus4_ccm4_debias5-2024-06-21T21-40-07/checkpoints/omcm-checkpoint-100000.ckpt"
   omcm_min_step: 700
 
   dreambooth_path: "models/DreamBooth_LoRA/realisticVisionV51_v51VAE.safetensors"
